# cgal-conan

./: CMakeLists.txt  README.md  arr_exact_construction_segments.h  arrangement_with_data.cpp  arrangement_with_history.cpp  boolean_operations.cpp  conanfile.py  ex_overlay_color.cpp  main.cpp  requirements.txt
